// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<span
  className="es-input ant-input-affix-wrapper"
>
  <span
    className="ant-input-prefix"
  >
    <i
      aria-label="icon: mail"
      className="anticon anticon-mail es-icon"
      style={
        Object {
          "fontSize": undefined,
        }
      }
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="mail"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-40 110.8V792H136V270.8l-27.6-21.5 39.3-50.5 42.8 33.3h643.1l42.8-33.3 39.3 50.5-27.7 21.5zM833.6 232L512 482 190.4 232l-42.8-33.3-39.3 50.5 27.6 21.5 341.6 265.6a55.99 55.99 0 0 0 68.7 0L888 270.8l27.6-21.5-39.3-50.5-42.7 33.2z"
        />
      </svg>
    </i>
  </span>
  <input
    className="ant-input"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="E-mail"
    style={null}
    type="text"
    value=""
  />
</span>
`;

exports[`renders correctly 2`] = `
<span
  className="ant-input-password es-input ant-input-affix-wrapper"
>
  <input
    action="click"
    className="ant-input"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Senha"
    style={null}
    type="password"
    value=""
  />
  <span
    className="ant-input-suffix"
  >
    <i
      aria-label="icon: eye-invisible"
      className="anticon anticon-eye-invisible ant-input-password-icon"
      onClick={[Function]}
      onMouseDown={[Function]}
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="eye-invisible"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 0 0 0-51.5zm-63.57-320.64L836 122.88a8 8 0 0 0-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 0 0 0 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 0 0 0 11.31L155.17 889a8 8 0 0 0 11.31 0l712.15-712.12a8 8 0 0 0 0-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 0 0-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 0 1 146.2-106.69L401.31 546.2A112 112 0 0 1 396 512z"
        />
        <path
          d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 0 0 227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 0 1-112 112z"
        />
      </svg>
    </i>
  </span>
</span>
`;

exports[`renders correctly 3`] = `
<span
  className="ant-input-search es-input-search ant-input-affix-wrapper"
>
  <input
    className="ant-input"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Busque seu conteúdo"
    style={null}
    type="text"
    value=""
  />
  <span
    className="ant-input-suffix"
  >
    <i
      aria-label="icon: search"
      className="anticon anticon-search ant-input-search-icon"
      onClick={[Function]}
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="search"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
        />
      </svg>
    </i>
  </span>
</span>
`;
